# near-zk-light-client-jolt

./: .envrc  Cargo.toml  flake.nix  rust-toolchain.toml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: d5vy5drmacbc6mppxwh0irn622qvvz51-source  dqrbhxmimlvdnfgmrhhd5hnzncv5j15d-source  j10523yhkcc34478azkgcl70yzcx6j2j-source
fixtures/: batch.hex  batch.json  deployments.json  e2e_bps.json  e2e_header.json  get_proofs.json  ids.json  main_0.json  main_1.json  main_2.json  new.json  old.json  rpc_result.json  sync_proof.json  test_0.json  test_1.json  test_2.json  verify_proof.json
guest/: Cargo.toml
guest/src/: error.rs  lib.rs  light_client.rs  merkle.rs
guest/src/light_client/: types.rs
src/: main.rs
types/: Cargo.toml
types/src/: lib.rs  merkle.rs
