[package]
name = "near-lc-jolt"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["guest", "types"]

[profile.release]
debug = 1
codegen-units = 1
lto = "fat"

[dependencies]
jolt = { package = "jolt-sdk", git = "https://github.com/a16z/jolt", branch = "ncitron/configure-jolt-device", features = [
  "std",
] }
serde_json = "*"
serde = { version = "*", features = ["derive"] }
guest = { path = "./guest" }
types = { path = "./types", features = ["std"] }

near-primitives = { version = "*" }
near-crypto = { version = "*" }

[workspace.dependencies]
jolt = { package = "jolt-sdk", git = "https://github.com/a16z/jolt", branch = "ncitron/configure-jolt-device" }

[patch.crates-io]
ark-ff = { git = "https://github.com/a16z/arkworks-algebra", branch = "optimize/field-from-u64" }
ark-ec = { git = "https://github.com/a16z/arkworks-algebra", branch = "optimize/field-from-u64" }
ark-serialize = { git = "https://github.com/a16z/arkworks-algebra", branch = "optimize/field-from-u64" }
#[jolt::provable(max_input_size = 10000, max_output_size = 10000)]d25519-dalek = { git = "https://github.com/sp1-patches/curve25519-dalek" }

[dev-dependencies]
