[package]
name = "guest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "guest"
path = "./src/lib.rs"

[features]
guest = []

[dependencies]
jolt = { package = "jolt-sdk", git = "https://github.com/a16z/jolt" }
sha2 = "*"
borsh = "*"
serde = { version = "*", features = ["derive"], no-default-features = true }

# Not sure if no-std usable
serde_with = "*"
near-crypto = "*"
near-account-id = "*"
near-jsonrpc-primitives = "*"
hex = "*"
