[package]
name = "guest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "guest"
path = "./src/lib.rs"

[features]
# default = ["guest"]
guest = []

[dependencies]
serde = { version = "*", features = ["derive"], default-features = false }
serde_with = { version = "*", features = [
  "hex",
  "base64",
  "macros",
  "alloc",
], default-features = false }
jolt = { package = "jolt-sdk", git = "https://github.com/a16z/jolt" }
sha2 = { version = "*", default-features = false }
hex = { version = "*", default-features = false }
borsh = { version = "*", features = ["derive"], default-features = false }


# Testing
curve25519-dalek = { version = "=4.1.1", default-features = false }
ed25519-dalek = { version = "=2.1.1", default-features = false, features = [
  "serde",
] }


# Naughty no-std crates
# near-account-id = { version = "*", default-features = false }
# near-crypto = { version = "*", default-features = false }
# near-jsonrpc-primitives = { version = "*", default-features = false }

[dev-dependencies]
serde_json = "*"
