[package]
name = "guest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "guest"
path = "./src/lib.rs"

[features]
guest = []
std = ["near-primitives", "near-crypto"]

[dependencies]
jolt.workspace = true
serde = { version = "*", features = ["derive"], default-features = false }
serde_with = { version = "*", features = [
  "hex",
  "base64",
  "macros",
  "alloc",
], default-features = false }
sha2 = { version = "*", default-features = false }
hex = { version = "*", default-features = false }
types = { path = "../types", default-features = false }
borsh = { version = "1.4", features = ["derive"], default-features = false }


# Testing
curve25519-dalek = { version = "=4.1.1", default-features = false }
ed25519-dalek = { version = "=2.1.1", default-features = false, features = [
  "serde",
] }


#### Std crates that are optional
near-primitives = { version = "0.19", optional = true }
near-crypto = { version = "0.19", optional = true }


# Naughty no-std crates
# near-account-id = { version = "*", default-features = false }
# near-crypto = { version = "*", default-features = false }
# near-jsonrpc-primitives = { version = "*", default-features = false }

[dev-dependencies]
serde_json = "*"
