[package]
name = "types"
version = "0.1.0"
edition = "2021"

[features]
std = ["near-primitives", "near-crypto"]

[dependencies]
sha2 = { version = "*", default-features = false }
serde = { version = "*", features = ["derive"], default-features = false }
serde_with = { version = "*", features = [
  "hex",
  "base64",
  "macros",
  "alloc",
], default-features = false }
borsh = { version = "*", features = ["derive"], default-features = false }

# Testing
curve25519-dalek = { version = "=4.1.1", default-features = false }
ed25519-dalek = { version = "=2.1.1", default-features = false, features = [
  "serde",
] }


#### Std crates that are optional
near-primitives = { version = "*", optional = true }
near-crypto = { version = "*", optional = true }
